# reservoir_sampling

./: .gitignore  CITATION.cff  README.md  pyproject.toml  reservoir_sampling.py  setup.cfg
reservoir_sampling/: __init__.py  __main__.py  cli.py  reservoir_sampling.py
reservoir_sampling/cli/: __main__.py  unweighted.py  weighted.py
tests/: test_reservoir_sampling.py
