[metadata]
author = Samuel Larkin
description = Weighted or unweighted reservoir sampling.
keywords = sampling, reservoir, CLI, library, console, terminal
long_description = file: README.md
long_description_content_type = text/markdown
name = reservoir_sampling
platforms = any
provides = reservoir_sampling
url = https://github.com/SamuelLarkin/reservoir_sampling.git
version = 0.1.0
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers =
   Framework :: IPython
   Framework :: Jupyter
   Intended Audience :: Education
   Intended Audience :: End Users/Desktop
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3.8
   Topic :: Scientific/Engineering :: Artificial Intelligence
   Topic :: Scientific/Engineering :: Information Analysis
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Software Development :: Libraries
   Topic :: Software Development :: Libraries
   Topic :: Software Development :: Libraries :: Python Modules
   Topic :: Software Development :: Libraries :: Python Modules
   Topic :: Software Development :: User Interfaces
   Topic :: System :: Installation/Setup
   Topic :: System :: Shells
   Topic :: Terminals
   Topic :: Utilities
   Topic :: Utilities
   Typing :: Typed


[options]
tests_require = pytest
python_requires = >=3.6
packages=find:

[options.entry_points]
console_scripts =
   reservoir_sampling = reservoir_sampling.cli:main

[options.packages.find]
exclude=tests

[tool:pytest]
testpaths=tests
